# doska

./: .dockerignore  .env.example  .env.selfhost.example  .env.sync-selfhost.example  .gitignore  .npmrc  LICENSE  README.md  backup.sh  commitlint.config.js  docker-compose.base.yml  docker-compose.dokploy.yml  docker-compose.landing.yml  docker-compose.selfhost.yml  docker-compose.sync-selfhost.yml  docker-compose.yml  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: build.yml  ci.yml  e2e.yml  images.yml  lint.yml  release.yml  test.yml
apps/client/: Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  prettier.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
apps/client/src/: App.tsx  (+4 more)
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/landing/: Dockerfile  index.html  nginx.conf  package.json  prerender.js  prettier.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/mcp/: .env.example  README.md  package.json
apps/server/: .env.example  .gitignore  Dockerfile  drizzle.config.ts  package.json  prettier.config.js  tsconfig.json  vitest.config.ts
client/: package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
client/e2e/: card-crud.spec.ts  drag-drop.spec.ts  sync-persistence.spec.ts
client/src/: App.tsx  index.css  main.tsx
(+366 files in other folders)
