[package]
name = "deck-desktop"
version = "0.1.0"
description = "Deck desktop"
authors = ["Rita Romenkova"]
edition = "2021"

[lib]
name = "deck_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-window-state = "2"
