[package]
name = "deck-desktop"
version = "0.1.0"
description = "Deck desktop"
authors = ["Rita Romenkova"]
edition = "2021"

[lib]
name = "deck_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-window-state = "2"
# Referenced by the generate_context! macro once the updater pubkey is embedded.
serde_json = "1"

# Auto-update is desktop-only; the updater crate doesn't build for mobile.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
